added get authenticate with middlewares and it's Documentation
