# routes/user.routes.js
@@ -1,5 +1,6 @@
 const router = require("express").Router();
-const { register, login, verifyOtp, resendOtp, forgetPassword, resetPassword } = require("../controllers/user.controllers");
+const { register, login, verifyOtp, resendOtp, forgetPassword, resetPassword, auth } = require("../controllers/user.controllers");
+const restrict = require("../middlewares/auth.middlewares");
 
 // API Auth Users
 router.post("/users/register", register);
@@ -8,5 +9,6 @@ router.put("/users/verify-otp", verifyOtp);
 router.put("/users/resend-otp", resendOtp);
 router.post("/users/forget-password", forgetPassword);
 router.put("/users/reset-password", resetPassword);
+router.get("/users/authenticate", restrict, auth);
 
 module.exports = router;
